# bpsr-logs

./: .prettierignore  README.md  bpsr-logs.code-workspace  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: RELEASE.md  build.yml  pr.yml
raw-game-files/0_Scripts/: 2_FinalCleanup.py
raw-game-files/1_Dirty/: monsters_questlog.json
raw-game-files/4_Final/: CombinedTranslatedWithManualOverrides.json  Conflicts.json
src/: app.css
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: additional.json  default.json  global-hotkeys.json  live.json  main.json  svelte.json  windows.json
src-tauri/meter-data/: SkillName.json
src-tauri/src/: build_app.rs  db.rs  lib.rs  live.rs  packets.rs  service.rs
src-tauri/src/blueprotobuf-lib/: Cargo.toml  build.rs
src-tauri/src/blueprotobuf-lib/src/: blueprotobuf_package.serde.rs  lib.rs  pb.proto
src-tauri/src/live/: bptimer.rs  bptimer_state.rs  bptimer_stream.rs  commands.rs  commands_models.rs  crowdsource_persistence.rs  history_commands.rs  live_main.rs  opcodes_models.rs  opcodes_process.rs  player_state.rs  utils.rs
src-tauri/src/packets/: opcodes.rs  packet_capture.rs  packet_process.rs  read_packets_linux.rs  read_packets_pcap.rs  read_packets_windivert.rs  read_packets_windows.rs  test_add_packet.json  utils.rs
src-tauri/src/packets/packet_capture/: mod.rs  windivert.rs
src-tauri/src/protocol/: constants.rs  mod.rs  pb.proto  pb.rs
src-tauri/src/utils/: modules.rs
src/lib/: bindings.ts  encounter-history-store.ts  encounter-store.ts  player-metadata.ts  settings-store.ts  shortcuts.ts  store.svelte.ts  table-info.ts  utils.svelte.ts  utils.ts
src/lib/components/: abbreviated-number.svelte  footer.svelte  header.svelte  percent-format.svelte  player-info.svelte  skill-info.svelte
src/lib/components/settings/: general.svelte  live.svelte  misc.svelte  settings-button.svelte  settings-select.svelte  settings-shortcut.svelte  settings-slider.svelte  settings-switch-dialog.svelte  settings-switch.svelte  settings.ts  shortcuts.svelte
src/lib/components/ui/card/: card.svelte
src/lib/components/ui/command/: command-dialog.svelte  command-group.svelte
src/lib/components/ui/dialog/: dialog-title.svelte
src/lib/components/ui/item/: item-content.svelte
src/lib/components/ui/sheet/: sheet-content.svelte
src/lib/components/ui/sidebar/: constants.ts  context.svelte.ts  sidebar-menu-button.svelte  sidebar-trigger.svelte
src/lib/data/json/: MonsterName.json  MonsterNameBoss.json  MonsterNameCrowdsource.json  MonsterUidCrowdsource.json  SkillIcon.json  SkillName.json
src/lib/svelte-table/: flex-render.svelte  index.ts  render-component.ts  table.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/(live)/live/: +page.svelte
src/routes/heal/: +page.svelte
src/routes/live/: +layout.svelte  +page.svelte  +page.ts  footer.svelte  header.svelte
src/routes/live/boss/: +page.svelte
src/routes/live/boss-timers/: +page.svelte
src/routes/live/boss/skills/: +page.svelte
src/routes/live/dps/: +page.svelte
src/routes/live/dps/dpsSkillBreakdown/: +page.svelte
src/routes/live/dps/skills/: +page.svelte
src/routes/live/heal/: +page.svelte
src/routes/live/heal/healSkillBreakdown/: +page.svelte
src/routes/live/heal/skills/: +page.svelte
src/routes/main/: +layout.svelte  +page.svelte  +page.ts  header.svelte  routes.svelte.ts  sidebar.svelte
src/routes/main/history/: +page.svelte
src/routes/main/settings/: +page.svelte  accessibility.svelte  general.svelte  integration.svelte  live.svelte  misc.svelte  settings-button.svelte  settings-select.svelte  settings-slider.svelte  settings-switch-dialog.svelte  settings-switch.svelte  shortcuts.svelte  shortcuts.ts
src/routes/settings/: +page.svelte
src/routes/skills/: +page.svelte
