[package]
name = "bpsr-logs"
version = "0.22.4"
description = "Blue Protocol: Star Resonance DPS Meter written in Rust"
authors = ["winjwinj"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bpsr_logs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["tray-icon", "image-png"] }
serde = { version = "1.0.228", features = ["derive"] }
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-log = { version = "2.7.1", features = ["colored"] }
chrono = "0.4.42"
windivert = { version = "0.6.0", features = ["vendored"] }
etherparse = "0.19.0"
tokio = { version = "1.48.0", features = ["macros"] }
log = "0.4.29"
bytes = "1.11.0"
zstd = "0.13.3"
byteorder = "1.5.0"
prost = "0.14.1"
specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
tauri-plugin-window-state = "2.4.1"
once_cell = "1.21.3"
serde_json = { version = "1.0.148", features = ["arbitrary_precision"] }
window-vibrancy = "0.7.1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-svelte = "3"
tauri-plugin-os = "2"
chrono-tz = "0.10.4"
reqwest = { version = "0.13.1", features = ["json", "blocking", "rustls"], default-features = false }
tauri-plugin-opener = "2"
dotenvy = "0.15.7"

[dependencies.blueprotobuf-lib]
path = "./src/blueprotobuf-lib"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
