[package]
name = "bpsr-logs"
version = "0.23.0"
description = "Blue Protocol: Star Resonance DPS Meter written in Rust"
authors = ["winjwinj"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bpsr_logs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
prost-build = "0.14.3"
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
base64 = "0.22"
bytes = "1.11.0"
byteorder = "1.5.0"
chrono = "0.4.43"
dotenvy = "0.15.7"
etherparse = "0.19.0"
flate2 = "1.1"
log = "0.4.29"
prost = "0.14.3"
reqwest = { version = "0.13.1", features = ["json", "blocking", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["arbitrary_precision"] }
specta = "2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri = { version = "2.9.5", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = { version = "2.8.0", features = ["colored"] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2.3.7"
tauri-plugin-svelte = "3"
tauri-plugin-window-state = "2.4.1"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
tokio = { version = "1.49.0", features = ["macros"] }
window-vibrancy = "0.7.1"
zstd = "0.13.3"

[target.'cfg(target_os = "windows")'.dependencies]
windivert = { version = "0.6.0", features = ["vendored"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
