[package]
name = "blueprotobuf-lib"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
protox = "0.9.1"
prost = "0.14.3"
prost-build = "0.14.3"
pbjson-build = "0.9.0"

[dependencies]
prost = "0.14.3"
prost-types = "0.14.3"
pbjson = "0.9.0"
pbjson-types = "0.9.0"
serde = "1.0.228"
specta = "2.0.0-rc.22"
tauri-specta = "2.0.0-rc.21"
